# ClinicalRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
src/agents_src/: agents.py  crew.py  tasks.py
src/agents_src/tools/: rag_tool.py
src/backend_src/api/: app.py
src/backend_src/auth/: auth.py
src/backend_src/config/: backend_settings.py
src/backend_src/services/: get_rag_resp.py  guardrails.py  semantic_cache.py
src/evaluation/: evaluate.py
src/frontend_src/: app.py
src/frontend_src/config/: frontend_settings.py
src/rag_ingestion/: rag_ingestion.py  retrieval.py
src/rag_ingestion/config/: rag_ingestion_settings.py
src/utils/: logging.py  retry.py
