[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[litellm]>=1.10.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-classic>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.7.17",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.1.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redisvl>=0.18.1",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "tenacity>=9.1.2",
    "bcrypt>=4.0.0",
    "PyJWT>=2.10.1",
    "slowapi>=0.1.9",
    "structlog>=25.3.0",
    "uvicorn>=0.42.0",
]
